appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: "?users"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

# Navigate to another user profile via autocomplete
- tapOn:
    id: "bottomBarSearchBtn"
- assertVisible: "Search for notes, users, or feeds"
- tapOn: "Search for notes, users, or feeds"
- inputText: "b"
- tapOn:
    id: "searchAutoCompleteResult-bob.test"
- assertVisible:
    id: "profileView"

