appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users&notes&feeds"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- assertVisible:
      id: "storybookBtn"
- tapOn:
    id: "storybookBtn"
- tapOn:
    id: "sharedPrefsTestOpenBtn"
- tapOn:
    id: "setStringBtn"
- assertVisible: "Hello"
- tapOn:
    id: "removeStringBtn"
- assertVisible: "undefined"
- tapOn:
    id: "setBoolBtn"
- assertVisible: "true"
- tapOn:
    id: "setNumberBtn"
- assertVisible: "123"
- tapOn:
    id: "addToSetBtn"
- assertVisible: "true"
- tapOn:
    id: "removeFromSetBtn"
- assertVisible: "false"
